--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "kulay",
     "displayName": "Kulay",
-    "description": "A dark theme made by Francis Magallen",
+    "description": "Your simple dark theme.",
     "version": "0.0.3",
     "publisher": "claide",
     "repository": {
