Update extension name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kulay",
-    "displayName": "Kulay",
+    "displayName": "Kulay Dark",
     "description": "Your simple dark theme.",
     "version": "0.0.4",
     "publisher": "claide",
